results/SpecGenBench/4-shot/log-Smallest-2023_11_05_21_28_28.txt
public class Smallest {

    //@ requires a != null;
    //@ ensures \result == -1 <==> a.length == 0;
    //@ ensures 0 <= \result && \result < a.length ==> a[\result] <= a[old(\result)];
    static public int Smallest(int[] a) {
        if (a.length == 0) return -1;

        int index = 0;
        int smallest = 0;

        //@ maintaining 0 <= index && index <= a.length;
        //@ maintaining 0 <= smallest && smallest < a.length;
        //@ maintaining (\forall int i; 0 <= i && i < index; a[smallest] <= a[i]);
        //@ decreases a.length - index;
        while (a.length - index > 0) {
            if (a[index] < a[smallest]) {
                smallest = index;
            }
            index = index + 1;
        }
        return smallest;
    }
}
/home/max/Documents/JMLGPT/tmp/Smallest.java:5: error: cannot find symbol
    //@ ensures 0 <= \result && \result < a.length ==> a[\result] <= a[old(\result)];
                                                                       ^
  symbol:   method old(int)
  location: class Smallest
1 error

